fix visibility range classes and the to_breakpoint mixin

--- a/scss/vanilla/components/_visibility.scss
+++ b/scss/vanilla/components/_visibility.scss
@@ -5,31 +5,31 @@
 	}
 }
 
-@media  (min-width: $vanilla-breakpoint-medium + 1px), (max-width: $vanilla-breakpoint-small) {
+@media  (min-width: $vanilla-breakpoint-medium ), (max-width: $vanilla-breakpoint-small - 1) {
 	.visible-on-small {
 		display: none;
 	}
 }
 
-@media  (min-width: $vanilla-breakpoint-large + 1px), (max-width: $vanilla-breakpoint-medium) {
+@media  (min-width: $vanilla-breakpoint-large), (max-width: $vanilla-breakpoint-medium - 1) {
 	.visible-on-medium {
 		display: none;
 	}
 }
 
-@media  (min-width: $vanilla-breakpoint-x-large + 1px), (max-width: $vanilla-breakpoint-large) {
+@media  (min-width: $vanilla-breakpoint-x-large ), (max-width: $vanilla-breakpoint-large - 1) {
 	.visible-on-large {
 		display: none;
 	}
 }
 
-@media  (min-width: $vanilla-breakpoint-xx-large + 1px), (max-width: $vanilla-breakpoint-x-large) {
+@media  (min-width: $vanilla-breakpoint-xx-large), (max-width: $vanilla-breakpoint-x-large - 1) {
 	.visible-on-x-large {
 		display: none;
 	}
 }
 
-@media  (max-width: $vanilla-breakpoint-xx-large)  {
+@media  (max-width: $vanilla-breakpoint-xx-large - 1)  {
 	.visible-on-xx-large {
 		display: none;
 	}
