--- a/scss/vanilla/grid/_breakpoints.scss
+++ b/scss/vanilla/grid/_breakpoints.scss
@@ -8,23 +8,23 @@ $vanilla-breakpoint-xx-large: 1920px;
 @mixin from_breakpoint($point) {
 
 	@if $point == xx-large {
-		@media  (min-width: $vanilla-breakpoint-xx-large + 1px) {
+		@media  (min-width: $vanilla-breakpoint-xx-large) {
 			@content;
 		}
 	} @else if $point == x-large {
-		@media  (min-width: $vanilla-breakpoint-x-large + 1px) {
+		@media  (min-width: $vanilla-breakpoint-x-large ) {
 			@content;
 		}
 	} @else if $point == large {
-		@media  (min-width: $vanilla-breakpoint-large + 1px) {
+		@media  (min-width: $vanilla-breakpoint-large ) {
 			@content;
 		}
 	} @else if $point == medium {
-		@media  (min-width: $vanilla-breakpoint-medium + 1px) {
+		@media  (min-width: $vanilla-breakpoint-medium ) {
 			@content;
 		}
 	} @else if $point == small {
-		@media  (min-width: $vanilla-breakpoint-small + 1px) {
+		@media  (min-width: $vanilla-breakpoint-small ) {
 			@content;
 		}
 	}
@@ -35,23 +35,23 @@ $vanilla-breakpoint-xx-large: 1920px;
 @mixin to_breakpoint($point) {
 
 	@if $point == xx-large {
-		@media  (max-width: $vanilla-breakpoint-xx-large) {
+		@media  (min-width: $vanilla-breakpoint-xx-large) {
 			@content;
 		}
 	} @else if $point == x-large {
-		@media  (max-width: $vanilla-breakpoint-x-large) {
+		@media  (max-width: $vanilla-breakpoint-xx-large - 1) {
 			@content;
 		}
 	} @else if $point == large {
-		@media  (max-width: $vanilla-breakpoint-large) {
+		@media  (max-width: $vanilla-breakpoint-x-large - 1) {
 			@content;
 		}
 	} @else if $point == medium {
-		@media  (max-width: $vanilla-breakpoint-medium) {
+		@media  (max-width: $vanilla-breakpoint-large - 1) {
 			@content;
 		}
 	} @else if $point == small {
-		@media  (max-width: $vanilla-breakpoint-small) {
+		@media  (max-width: $vanilla-breakpoint-medium - 1) {
 			@content;
 		}
 	}
@@ -62,27 +62,27 @@ $vanilla-breakpoint-xx-large: 1920px;
 @mixin is_breakpoint($point) {
 
 	@if $point == xx-large {
-		@media  (max-width: $vanilla-breakpoint-xx-large) {
+		@media  (min-width: $vanilla-breakpoint-xx-large) {
 			@content;
 		}
 	} @else if $point == x-large {
-		@media  (min-width: $vanilla-breakpoint-x-large) and (max-width: $vanilla-breakpoint-xx-large) {
+		@media  (min-width: $vanilla-breakpoint-x-large) and (max-width: $vanilla-breakpoint-xx-large - 1) {
 			@content;
 		}
 	} @else if $point == large {
-		@media  (min-width: $vanilla-breakpoint-large) and (max-width: $vanilla-breakpoint-x-large) {
+		@media  (min-width: $vanilla-breakpoint-large) and (max-width: $vanilla-breakpoint-x-large - 1) {
 			@content;
 		}
 	} @else if $point == medium {
-		@media  (min-width: $vanilla-breakpoint-medium) and (max-width: $vanilla-breakpoint-large) {
+		@media  (min-width: $vanilla-breakpoint-medium) and (max-width: $vanilla-breakpoint-large - 1) {
 			@content;
 		}
 	} @else if $point == small {
-		@media  (min-width: $vanilla-breakpoint-small) and (max-width: $vanilla-breakpoint-medium) {
+		@media  (min-width: $vanilla-breakpoint-small) and (max-width: $vanilla-breakpoint-medium - 1) {
 			@content;
 		}
-	} @else if $point == none {
-		@media  (max-width: $vanilla-breakpoint-small) {
+	} @else if $point == x-small {
+		@media  (max-width: $vanilla-breakpoint-small - 1) {
 			@content;
 		}
 	}
